--- a/tools/milvus_query.yaml
+++ b/tools/milvus_query.yaml
@@ -1,6 +1,6 @@
 identity:
   name: "milvus_query"
-  author: "zeroz_jq"
+  author: "zeroz-lab"
   label:
     en_US: "Milvus Data Query"
     zh_Hans: "Milvus 数据查询"
