--- a/manifest.yaml
+++ b/manifest.yaml
@@ -15,12 +15,15 @@ description:
 icon: icon.svg
 resource:
   memory: 268435456
-  permission: {}
+  permission:
+    model:
+      enabled: true
+      text_embedding: true
 plugins:
   tools:
     - provider/milvus.yaml
 meta:
-  version: 0.0.1
+  version: 0.1.3
   arch:
     - amd64
     - arm64
