Update manifest and documentation to reflect changes in vector handling; disable text embedding in manifest, clarify requirements for precomputed vectors in README and tool YAML files.

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -17,8 +17,7 @@ resource:
   memory: 268435456
   permission:
     model:
-      enabled: true
-      text_embedding: true
+      enabled: false
 plugins:
   tools:
     - provider/milvus.yaml
