--- a/tools/milvus_query.yaml
+++ b/tools/milvus_query.yaml
@@ -90,6 +90,19 @@ parameters:
       pt_BR: "Número máximo de resultados a retornar (apenas para consultas com filtro)"
     llm_description: "Maximum number of results to return (applies only to filter-based queries)"
     form: llm
+  - name: primary_field
+    type: string
+    required: false
+    label:
+      en_US: "Primary Field Name"
+      zh_Hans: "主键字段名"
+      pt_BR: "Nome do Campo Primário"
+    human_description:
+      en_US: "Override the primary key field name when querying by IDs (default: detect from collection, fallback 'id')."
+      zh_Hans: "按 ID 查询时指定主键字段名；默认自动检测，失败时使用 'id'。"
+      pt_BR: "Sobrescreve o nome do campo primário ao consultar por IDs (padrão: detectar da coleção, fallback 'id')."
+    llm_description: "Optional primary key field name to use when fetching entities by IDs"
+    form: llm
 extra:
   python:
     source: tools/milvus_query.py 
